# CppProject

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.new  Makefile.old  cmake_install.cmake  compile_commands.json
example/: CMakeLists.txt  Makefile  cmake_install.cmake  main_client  main_client.cc  main_disk.cc  main_memory  main_memory.cc  myclient  myserver  test_server.cc
include/: client.h  database.h  disk_db.h  memory_db.h  message_handler.h  ourserver.h  protocolviolationexception.h  server.h
src/: CMakeLists.txt  Makefile  MessageHandler.java  client.cc  client.h  cmake_install.cmake  database.h  disk_db.cc  disk_db.h  mainMemoryDB.cc  main_memory.cc  memory_db.cc  memory_db.h  message_handler.cc  message_handler.h  ourserver.cc  server.cc
src/tests/: test.cc
xandor/: CMakeLists.txt  Makefile
xandor/include/: client.h  database.h  exceptions.h  memory_db.h  server.h
xandor/src/: Makefile  client.cc  disk_db.cc  memory_db.cc  ourserver.cc
xandor/src/mains/: CMakeLists.txt  Makefile  main_client.cc  main_memory.cc
